# PioneerGUI

./: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: types.ts  utils.ts
src/lib/components/: JsonEditor.svelte
