[package]
name = "pioneer-gui"
version = "0.1.0"
edition = "2021"
description = "Tauri GUI for Pioneer.jl"
authors = ["PioneerGUI Maintainers"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.10"
which = "5.0"
tauri = { version = "1.5", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1.5" }
